# puremark

./: .gitignore  .gitmodules  README.md  build.cmd  build.sh
scripts/: build.py  c_parser.py  parser.py
src/app/puremark/: .gitignore  native-func-log.txt  pubspec.yaml
src/app/puremark/android/app/: build.gradle
src/app/puremark/android/app/src/main/: AndroidManifest.xml
src/app/puremark/android/app/src/main/kotlin/com/example/puremark/: MainActivity.kt
src/app/puremark/examples/: html-example.html  js-example.js
src/app/puremark/ios/Runner/: Info.plist
src/app/puremark/ios/Runner.xcodeproj/: project.pbxproj
src/app/puremark/lib/: main.dart
src/app/puremark/lib/autogen/bindings/: add.dart  bindings.dart
src/app/puremark/lib/layout/: edit_page.dart  terminal_page.dart
src/app/puremark/linux/: CMakeLists.txt
src/app/puremark/linux/runner/: my_application.cc
src/app/puremark/macos/Runner.xcodeproj/: project.pbxproj
src/app/puremark/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
src/app/puremark/macos/Runner/Configs/: AppInfo.xcconfig
src/app/puremark/test/: widget_test.dart
src/app/puremark/web/: index.html  manifest.json
src/app/puremark/windows/: CMakeLists.txt
src/app/puremark/windows/runner/: Runner.rc  main.cpp
src/pmrender/: CMakeLists.txt
src/pmrender/src/: bindings.h  native_functions.c  native_functions.h
